DB creation and model update.