@@ -1,14 +1,6 @@
 package com.air.quality.controller;
 
-import com.air.quality.AirQualityRunner;
-import com.air.quality.entity.AmbeeAirQuality;
-import com.air.quality.model.ambee.AirQuality;
-import com.air.quality.repository.AmbeeAirQualityRepository;
 import com.air.quality.service.AmbeeParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import kong.unirest.HttpResponse;
-import kong.unirest.Unirest;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,14 +9,10 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.annotation.PostConstruct;
-import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 
 @RestController
 public class AmbeeController {
@@ -49,10 +37,9 @@ public class AmbeeController {
 
     @GetMapping
     public void parseCityData() throws IOException, URISyntaxException {
-        System.out.println(System.getProperty("user.dir"));
-//        ambeeParser.parse(Files.readString(Paths.get("target/classes/json/second.json"), StandardCharsets.UTF_8));
-        ambeeParser.parse(Files.readString(Paths.get(ClassLoader.getSystemResource("json/second.json")
-                                                                .toURI()), StandardCharsets.UTF_8));
+        Class currentClass = this.getClass();
+        ClassLoader classLoader = currentClass.getClassLoader();
+        ambeeParser.parse(Files.readString(Path.of(classLoader.getResource("json/second.json").toURI())));
 
 //        HttpResponse<String> response = Unirest.get(ambeeCityUrl + dataCollectingCity)
 //                .header("x-api-key", ambeeApiKey)
